--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -20,7 +20,8 @@
         /* galería */
         #main .container .section .post .wp-block-image.size-full img{width:100%;}
         #main .container .section .post .wp-block-gallery.grid{display:grid; grid-template-columns:1fr 1fr;}
-        #main .container .section .post .wp-block-gallery .wp-block-image{position:relative;}
+        #main .container .section .post .wp-block-gallery .wp-block-image{position:relative; transition:all .3s ease;}
+        #main .container .section .post .wp-block-gallery .wp-block-image:hover{background-color:rgba(0,0,0,.25);}
         #main .container .section .post .wp-block-gallery .wp-block-image:before{content:''; position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); width:1px; height:50px; background-color:transparent; z-index:1; transition:all .3s ease;}
         #main .container .section .post .wp-block-gallery .wp-block-image:hover:before{background-color:#DC9814;}
         #main .container .section .post .wp-block-gallery .wp-block-image:after{content:''; position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); width:50px; height:1px; background-color:transparent; z-index:1; transition:all .3s ease;}
