--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -29,9 +29,9 @@
         #main .container .section .post .wp-block-gallery .wp-block-image:hover:after{background-color:#DC9814;}
         #main .container .section .post .wp-block-gallery .wp-block-image img{transition:all .3s ease;}
         #main .container .section .post .wp-block-gallery .wp-block-image img:hover{filter:brightness(.3);}
-        .wp-block-gallery.grid.has-nested-images.columns-default figure.wp-block-image:not(#individual-image),
-        .wp-block-gallery.grid.has-nested-images.columns-default figure.wp-block-image:not(#individual-image):first-child:nth-last-child(2), 
-        .wp-block-gallery.grid.has-nested-images.columns-default figure.wp-block-image:not(#individual-image):first-child:nth-last-child(2)~figure.wp-block-image:not(#individual-image){width:100%;}
+        .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image),
+        .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image):first-child:nth-last-child(2), 
+        .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image):first-child:nth-last-child(2)~figure.wp-block-image:not(#individual-image){width:100%;}
     /* texto */
     #main .container .section .post p.has-title-color{color:var(--wp--preset--color--title)!important;}
     #main .container .section .post p.has-large-font-size{font-size:19px!important;}
