--- a/style.css
+++ b/style.css
@@ -22,3 +22,10 @@ a{transition:all .3s ease; border-radius:.2rem;}
 a:focus{outline:none; box-shadow:var(--wp--preset--color--links);}
 img{display:block; height:auto;}
 .container .section{width:min(100% - 30px, 1220px); margin-inline:auto;}
+
+/* cabecera */
+#main-header{position:sticky; top:0; background-color:var(--wp--preset--color--white); transform:translate3d(0, 0, 0); z-index:1;}
+    /* responsive header */
+    #main-header .mobile-header .header-content{display:grid; align-items:center; grid-template-columns:1fr auto 1fr; height:71px;}
+        /* marca */
+        #main-header .mobile-header .header-content .site-brand{grid-column:2/3;}
