--- a/style.css
+++ b/style.css
@@ -24,8 +24,9 @@ img{display:block; height:auto;}
 .container .section{width:min(100% - 30px, 1220px); margin-inline:auto;}
 
 /* cabecera */
-#main-header{position:sticky; top:0; background-color:var(--wp--preset--color--white); transform:translate3d(0, 0, 0); z-index:1;}
+#main-header{/*position:sticky; top:0; */ background-color:var(--wp--preset--color--background); border-bottom:1px solid var(--wp--preset--color--line); transform:translate3d(0, 0, 0); z-index:1;}
     /* responsive header */
     #main-header .mobile-header .header-content{display:grid; align-items:center; grid-template-columns:1fr auto 1fr; height:71px;}
         /* marca */
         #main-header .mobile-header .header-content .site-brand{grid-column:2/3;}
+        #main-header .mobile-header .header-content .site-brand a{color:var(--wp--preset--color--title); text-transform:uppercase; letter-spacing:10px;}
