--- a/style.css
+++ b/style.css
@@ -27,6 +27,16 @@ img{display:block; height:auto;}
 #main-header{/*position:sticky; top:0; */ background-color:var(--wp--preset--color--background); border-bottom:1px solid var(--wp--preset--color--line); transform:translate3d(0, 0, 0); z-index:1;}
     /* responsive header */
     #main-header .mobile-header .header-content{display:grid; align-items:center; grid-template-columns:1fr auto 1fr; height:71px;}
+        /* botón del menú */
+        .mobile-menu--button{position:relative; display:grid; place-content:center; cursor:pointer; z-index:1;}
+        .mobile-menu--button .bars{display:inline-block; width:18px; height:14px; transition:all .3s ease;}
+        .mobile-menu--button .bars :is(.bar1, .bar2, .bar3){width:18px; height:1px; transition:.4s; background-color:var(--wp--preset--color--title);}
+        .mobile-menu--button .bars:hover :is(.bar1, .bar2, .bar3){background-color:var(--wp--preset--color--title);}
+        .mobile-menu--button .bars > div:not(:last-child){margin-bottom:5px;}
+        .mobile-menu--button .bars.change{transition-delay:.8s; transform:rotate(45deg);}
+        .mobile-menu--button .bars.change .bar2{width:0;}
+        .mobile-menu--button .bars.change .bar1{transform:translateY(9px);}
+        .mobile-menu--button .bars.change .bar3{transform:translateY(-9px) rotate(90deg);}
         /* marca */
         #main-header .mobile-header .header-content .site-brand{grid-column:2/3;}
-        #main-header .mobile-header .header-content .site-brand a{color:var(--wp--preset--color--title); text-transform:uppercase; letter-spacing:10px;}
+        #main-header .mobile-header .header-content .site-brand a{color:var(--wp--preset--color--title); text-transform:uppercase; letter-spacing:10px; font-size:var(--wp--preset--font-size--x-large); font-weight:700;}
