--- a/style.css
+++ b/style.css
@@ -39,4 +39,4 @@ img{display:block; height:auto;}
         .mobile-menu--button .bars.change .bar3{transform:translateY(-9px) rotate(90deg);}
         /* marca */
         #main-header .mobile-header .header-content .site-brand{grid-column:2/3;}
-        #main-header .mobile-header .header-content .site-brand a{color:var(--wp--preset--color--title); text-transform:uppercase; letter-spacing:10px; font-size:var(--wp--preset--font-size--x-large); font-weight:700;}
+        #main-header .mobile-header .header-content .site-brand a{color:var(--wp--preset--color--title); text-transform:uppercase; text-align:center; letter-spacing:10px; font-size:var(--wp--preset--font-size--x-large); font-weight:700;}
