--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ img{display:block; height:auto;}
     /* responsive header */
     #main-header .mobile-header .header-content{display:grid; align-items:center; grid-template-columns:1fr auto 1fr; height:71px;}
         /* botón del menú */
-        .mobile-menu--button{position:relative; display:grid; place-content:center; cursor:pointer; z-index:1;}
+        .mobile-menu--button{position:relative; display:grid; place-content:center; margin-right:auto; cursor:pointer; z-index:1;}
         .mobile-menu--button .bars{display:inline-block; width:18px; height:14px; transition:all .3s ease;}
         .mobile-menu--button .bars :is(.bar1, .bar2, .bar3){width:18px; height:1px; transition:.4s; background-color:var(--wp--preset--color--title);}
         .mobile-menu--button .bars:hover :is(.bar1, .bar2, .bar3){background-color:var(--wp--preset--color--title);}
