--- a/style.css
+++ b/style.css
@@ -40,3 +40,5 @@ img{display:block; height:auto;}
         /* marca */
         #main-header .mobile-header .header-content .site-brand{grid-column:2/3;}
         #main-header .mobile-header .header-content .site-brand a{color:var(--wp--preset--color--title); text-transform:uppercase; text-align:center; letter-spacing:10px; font-size:var(--wp--preset--font-size--x-large); font-weight:700;}
+        /* menú izquierdo */
+        #main-header .mobile-header .header-content .attachments-list{margin-left:auto; display:inline-flex;}
