--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ img{display:block; height:auto;}
         #main-header .mobile-header .header-content .site-brand a{color:var(--wp--preset--color--title); text-transform:uppercase; text-align:center; letter-spacing:10px; font-size:var(--wp--preset--font-size--x-large); font-weight:700;}
         /* menú attachment */
         #main-header .mobile-header .header-content .attachment-list{margin-left:auto; display:inline-flex;}
+        #main-header .mobile-header .header-content .attachment-list li{display:inline-flex; align-items:center;}
         #main-header .mobile-header .header-content .attachment-list li a{color:var(--wp--preset--color--text);}
         #main-header .mobile-header .header-content .attachment-list li a:hover{color:var(--wp--preset--color--title);}
         #main-header .mobile-header .header-content .attachment-list :is(.wishlist-wrapper, .sign-in-wrapper){display:none;}
