--- a/style.css
+++ b/style.css
@@ -40,11 +40,11 @@ img{display:block; height:auto;}
         /* marca */
         #main-header .mobile-header .header-content .site-brand{grid-column:2/3;}
         #main-header .mobile-header .header-content .site-brand a{color:var(--wp--preset--color--title); text-transform:uppercase; text-align:center; letter-spacing:10px; font-size:var(--wp--preset--font-size--x-large); font-weight:700;}
-        /* menú attachment */
-        #main-header .mobile-header .header-content .attachment-list{margin-left:auto; display:inline-flex; gap:24px;}
-        #main-header .mobile-header .header-content .attachment-list li{display:inline-flex; align-items:center;}
-        #main-header .mobile-header .header-content .attachment-list li a{color:var(--wp--preset--color--text); display:inline-flex; align-items:center; gap:3px;}
-        #main-header .mobile-header .header-content .attachment-list li a:hover{color:var(--wp--preset--color--title);}
-        #main-header .mobile-header .header-content .attachment-list :is(.wishlist-wrapper, .sign-in-wrapper){display:none;}
-        #main-header .mobile-header .header-content .attachment-list .cart-wrapper .counter{font-size:0;}
-        #main-header .mobile-header .header-content .attachment-list :is(.wishlist-wrapper, .cart-wrapper) .counter :is(.parentesis, .number){font-size:14px;}
+        /* menús directamente dentro de la cabecera */
+        #main-header .mobile-header .header-content > nav ul{margin-left:auto; display:inline-flex; gap:24px;}
+        #main-header .mobile-header .header-content > nav ul li{display:inline-flex; align-items:center;}
+        #main-header .mobile-header .header-content > nav ul li a{color:var(--wp--preset--color--text); display:inline-flex; align-items:center; gap:3px;}
+        #main-header .mobile-header .header-content > nav ul li a:hover{color:var(--wp--preset--color--title);}
+        #main-header .mobile-header .header-content > nav ul :is(.wishlist-wrapper, .sign-in-wrapper){display:none;}
+        #main-header .mobile-header .header-content > nav ul .cart-wrapper .counter{font-size:0;}
+        #main-header .mobile-header .header-content > nav ul :is(.wishlist-wrapper, .cart-wrapper) .counter :is(.parentesis, .number){font-size:14px;}
