--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -14,7 +14,7 @@
     #main .container .section .post .author-and-date{font-size:var(--wp--preset--font-size--small); text-align:center; margin-bottom:35px;}
     #main .container .section .post .author-and-date span{color:var(--wp--preset--color--title);}
     /* citas */
-    #main .container .section .post .wp-block-quote{max-width:651px;}
+    #main .container .section .post .wp-block-quote{max-width:651px; margin-inline:auto;}
     #main .container .section .post .wp-block-quote p{color:var(--wp--preset--color--title); text-align:center;}
     /* imágenes */
         /* galería */
@@ -33,7 +33,7 @@
         .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image):first-child:nth-last-child(2), 
         .wp-block-gallery.has-nested-images.columns-default figure.wp-block-image:not(#individual-image):first-child:nth-last-child(2)~figure.wp-block-image:not(#individual-image){width:100%;}
     /* texto */
-    #main .container .section .post p.has-title-color{color:var(--wp--preset--color--title)!important;}
+    #main .container .section .post :is(p.has-title-color, p strong){color:var(--wp--preset--color--title)!important;}
     #main .container .section .post p.has-large-font-size{font-size:19px!important;}
 
 /* aside */
