--- a/style.css
+++ b/style.css
@@ -49,3 +49,10 @@ img{display:block; height:auto;}
         #main-header .mobile-header .header-content > nav ul :is(.wishlist-wrapper, .sign-in-wrapper){display:none;}
         #main-header .mobile-header .header-content > nav ul .cart-wrapper .counter{font-size:0;}
         #main-header .mobile-header .header-content > nav ul :is(.wishlist-wrapper, .cart-wrapper) .counter :is(.parentesis, .number){font-size:14px;}
+
+        /* footer */
+        #main-footer{background-color:#282828; color:#aaa; padding:30px 0 31px;}
+        #main-footer a{color:#aaa;}
+        #main-footer a:hover{color:#fff;}
+        #main-footer nav ul li{display:inline-flex; align-items:center; padding:3px 0; border-bottom:1px solid #3A3A3A;}
+        #main-footer nav ul li a{display:inline-flex; align-items:center; height:30px;}
