--- a/style.css
+++ b/style.css
@@ -54,5 +54,7 @@ img{display:block; height:auto;}
         #main-footer{background-color:#282828; color:#aaa; padding:30px 0 31px;}
         #main-footer a{color:#aaa;}
         #main-footer a:hover{color:#fff;}
-        #main-footer nav ul li{display:inline-flex; align-items:center; padding:3px 0; border-bottom:1px solid #3A3A3A;}
-        #main-footer nav ul li a{display:inline-flex; align-items:center; height:30px;}
+        /* menú secundario */
+        #main-footer .secondary ul{display:grid;}
+        #main-footer .secondary ul li{display:inline-flex; align-items:center; padding:3px 0; border-bottom:1px solid #3A3A3A;}
+        #main-footer .secondary ul li a{display:inline-flex; align-items:center; height:30px;}
