--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -51,7 +51,7 @@
         #main .container .section aside .tags-and-share .share a:not(:last-child){margin-right:20px;}
         #main .container .section aside .tags-and-share .share a svg{width:18px; height:18px;}
     /* categorías */
-    #main .container .section aside .categories{display:inline-flex; gap:7px;}
+    #main .container .section aside .categories{display:inline-flex; gap:7px; font-size:14px;}
     #main .container .section aside .categories .post-categories{display:inline-flex; flex-wrap:wrap; gap:7px;}
     #main .container .section aside .categories .post-categories li{position:relative;}
     #main .container .section aside .categories .post-categories li:not(:last-child):after{content:',';}
