--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@ img{display:block; height:auto;}
 .container .section{width:min(100% - 30px, 1220px); margin-inline:auto;}
 
 /* cabecera */
-#main-header{position:sticky; top:0; background-color:var(--wp--preset--color--background); border-bottom:1px solid var(--wp--preset--color--line); transform:translate3d(0, 0, 0); z-index:1;}
+#main-header{position:sticky; top:0; background-color:var(--wp--preset--color--background); border-bottom:1px solid var(--wp--preset--color--line); transform:translate3d(0, 0, 0);  height:71px; z-index:1;}
     /* responsive header */
-    #main-header .mobile-header .header-content{display:grid; align-items:center; grid-template-columns:1fr auto 1fr; height:71px;}
+    #main-header .mobile-header .header-content{display:grid; align-items:center; grid-template-columns:1fr auto 1fr;}
         /* botón del menú */
         .mobile-menu--button{position:relative; display:grid; place-content:center; margin-right:auto; cursor:pointer; z-index:1;}
         .mobile-menu--button .bars{display:inline-block; width:18px; height:14px; transition:all .3s ease;}
