--- a/style.css
+++ b/style.css
@@ -39,11 +39,11 @@ img{display:block; height:auto;}
         .mobile-menu--button .bars.change .bar1{transform:translateY(9px);}
         .mobile-menu--button .bars.change .bar3{transform:translateY(-9px) rotate(90deg);}
         /* menú mobile */
-        #main-header .mobile-header .menu-mobile{position:absolute; top:81px; background-color:var(--wp--preset--color--background); width:100%;}
-        #main-header .mobile-header .menu-mobile > nav ul{display:grid;}
-        #main-header .mobile-header .menu-mobile > nav ul li{display:inline-flex; align-items:center; height:43px; border-bottom:1px solid #eee;}
-        #main-header .mobile-header .menu-mobile > nav ul li a{color:var(--wp--preset--color--text); display:inline-flex; align-items:center; gap:3px;}
-        #main-header .mobile-header .menu-mobile > nav ul li a:hover{color:var(--wp--preset--color--title);}
+        #main-header .mobile-header .menu-mobile{position:absolute; top:81px; background-color:var(--wp--preset--color--background); width:100%; display:grid; gap:17px; padding:17px 15px;}
+        #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul{display:grid;}
+        #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul li{display:inline-flex; align-items:center; height:43px; border-bottom:1px solid #eee;}
+        #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul li a{color:var(--wp--preset--color--text); display:inline-flex; align-items:center; gap:3px;}
+        #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul li a:hover{color:var(--wp--preset--color--title);}
             /* wishlist */
             #main-header .mobile-header .attachment-nav .attachment-list .wishlist-wrapper .counter{font-size:16px;}
             #main-header .mobile-header .attachment-nav .attachment-list .wishlist-wrapper svg{display:none;}
