--- a/style.css
+++ b/style.css
@@ -34,10 +34,12 @@ img{display:block; height:auto;}
         .mobile-menu--button .bars :is(.bar1, .bar2, .bar3){width:18px; height:1px; transition:.4s; background-color:var(--wp--preset--color--title);}
         .mobile-menu--button .bars:hover :is(.bar1, .bar2, .bar3){background-color:var(--wp--preset--color--title);}
         .mobile-menu--button .bars > div:not(:last-child){margin-bottom:5px;}
-        .mobile-menu--button .bars.change{transition-delay:.8s; transform:rotate(45deg);}
-        .mobile-menu--button .bars.change .bar2{width:0;}
-        .mobile-menu--button .bars.change .bar1{transform:translateY(9px);}
-        .mobile-menu--button .bars.change .bar3{transform:translateY(-9px) rotate(90deg);}
+        /* botón del menú · activo */
+        .mobile-menu--button .bars.active{transition-delay:.5s; transform:rotate(45deg);}
+        .mobile-menu--button .bars.active .bar2{width:0;}
+        .mobile-menu--button .bars.active .bar1{transform:translateY(9px);}
+        .mobile-menu--button .bars.active .bar3{transform:translateY(-3px) rotate(90deg); width:1.8rem;}
+        .mobile-menu--button .bars.active :is(.bar1, .bar2, .bar3){background-color:var(--menu-mobile--button__active);}
         /* menú mobile */
         #main-header .mobile-header .menu-mobile{position:absolute; top:71px; background-color:var(--wp--preset--color--background); width:100%; display:grid; gap:17px; padding:17px 15px;}
         #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul{display:grid;}
