--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -1,5 +1,5 @@
 /* generales */
-#main .container.post-wrapper{padding-top:var(--padding-top--post-wrapper);}
+#main .container.post-wrapper{padding-top:var(--padding-top--post-wrapper); background-color:var(--wp--preset--color--background);}
 #main .container .section{width:min(100% - 30px, 921.19px);}
 #main .container .section :is(.post, aside){padding-bottom:50px; max-width:803px; margin-inline:auto;}
 #main .container .section .post > *:not(:last-child){margin-bottom:24px;}
@@ -58,7 +58,7 @@
     #main .container .section aside .categories .post-categories li:last-child{content:'.';}
 
 /* paginación */
-#main .container.pagination-wrapper{border-top:1px solid var(--wp--preset--color--line);}
+#main .container.pagination-wrapper{border-top:1px solid var(--wp--preset--color--line); background-color:var(--wp--preset--color--background);}
 #main .container .single-post-pagination{padding:var(--padding--single-post-pagination); width:var(--width-single-post-pagination); margin-inline:auto; display:flex; justify-content:space-between;}
 #main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link){display:grid; gap:0 10px; align-items:center;}
 #main .container .single-post-pagination :is(.left, .right) :is(.previous-post-link, .next-post-link) .title-post{display:var(--single-post-pagination--title-post);}
