--- a/style.css
+++ b/style.css
@@ -42,12 +42,14 @@ img{display:block; height:auto;}
         .mobile-menu--button .bars.active .bar3{transform:translateY(-3px) rotate(90deg);}
         .mobile-menu--button .bars.active :is(.bar1, .bar2, .bar3){background-color:var(--wp--preset--color--text);}
         /* menú mobile */
-        #main-header .mobile-header .menu-mobile{position:absolute; top:71px; background-color:var(--wp--preset--color--background); width:100%; display:grid; gap:17px; padding:17px 15px;}
+        #main-header .mobile-header .menu-mobile{position:absolute; top:71px; background-color:var(--wp--preset--color--background); width:100%; height:0; overflow:hidden; display:grid; gap:17px; padding:0 15px; transition:all .3s ease;}
         #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul{display:grid;}
         #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul li{display:inline-flex; align-items:center; height:43px; border-bottom:1px solid #eee;}
         #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul li a{color:var(--wp--preset--color--text); display:inline-flex; align-items:center; gap:3px;}
         #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul li a:hover{color:var(--wp--preset--color--title);}
-            /* wishlist */
+        /* menu mobile · abierto */
+        #main-header .mobile-header .menu-mobile.open{height:auto; padding:17px 0;}    
+        /* wishlist */
             #main-header .mobile-header .attachment-nav .attachment-list .wishlist-wrapper .counter{font-size:16px;}
             #main-header .mobile-header .attachment-nav .attachment-list .wishlist-wrapper svg{display:none;}
             #main-header .mobile-header .attachment-nav .attachment-list .wishlist-wrapper .counter .number{position:relative; top:-7px; color:var(--wp--preset--color--links);}
