--- a/style.css
+++ b/style.css
@@ -48,7 +48,14 @@ img{display:block; height:auto;}
         #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul li a{color:var(--wp--preset--color--text); display:inline-flex; align-items:center; gap:3px;}
         #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul li a:hover{color:var(--wp--preset--color--title);}
         /* menu mobile · abierto */
-        #main-header .mobile-header .menu-mobile.open{height:auto; padding:17px 15px;}    
+        #main-header .mobile-header .menu-mobile.open{
+            height:0; padding:0 15px;
+            animation-name:animation-menu-mobile; animation-direction:normal; animation-duration:2s; animation-timing-function:ease; animation-iteration-count:1;
+        }
+        @keyframes animation-menu-mobile{
+            0%  {height:0; padding:0 15px;}
+            100%{height:auto; padding:17px 15px;}
+        } 
         /* wishlist */
             #main-header .mobile-header .attachment-nav .attachment-list .wishlist-wrapper .counter{font-size:16px;}
             #main-header .mobile-header .attachment-nav .attachment-list .wishlist-wrapper svg{display:none;}
