menu mobile · php · css · js · menú abierto

--- a/style.css
+++ b/style.css
@@ -49,10 +49,10 @@ img{display:block; height:auto;}
         #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul li a:hover{color:var(--wp--preset--color--title);}
         /* menu mobile · abierto */
         #main-header .mobile-header .menu-mobile.open{
+            animation-name:animation-menu-mobile--open; animation-direction:normal; animation-duration:.3s; animation-timing-function:ease; animation-iteration-count:1;
             height:auto; padding:17px 15px;
-            animation-name:animation-menu-mobile; animation-direction:normal; animation-duration:.3s; animation-timing-function:ease; animation-iteration-count:1;
         }
-        @keyframes animation-menu-mobile{
+        @keyframes animation-menu-mobile--open{
             0%  {height:0; padding:0 15px;}
             100%{height:auto; padding:17px 15px;}
         } 
