--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ img{display:block; height:auto;}
         .mobile-menu--button .bars.active .bar3{transform:translateY(-3px) rotate(90deg);}
         .mobile-menu--button .bars.active :is(.bar1, .bar2, .bar3){background-color:var(--wp--preset--color--text);}
         /* menú mobile */
-        #main-header .mobile-header .menu-mobile{position:absolute; top:71px; background-color:var(--wp--preset--color--background); width:100%; height:0; overflow:hidden; display:grid; gap:17px; padding:0 15px; transition:all .3s ease;}
+        #main-header .mobile-header .menu-mobile{position:absolute; top:71px; background-color:var(--wp--preset--color--background); width:100%; max-height:0; overflow:hidden; display:grid; gap:17px; padding:0 15px; transition:all .3s ease;}
         #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul{display:grid;}
         #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul li{display:inline-flex; align-items:center; height:43px; border-bottom:1px solid #eee;}
         #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul li a{color:var(--wp--preset--color--text); display:inline-flex; align-items:center; gap:3px;}
@@ -50,11 +50,11 @@ img{display:block; height:auto;}
         /* menu mobile · abierto */
         #main-header .mobile-header .menu-mobile.open{
             animation-name:animation-menu-mobile--open; animation-direction:normal; animation-duration:.3s; animation-timing-function:ease; animation-iteration-count:1;
-            height:auto; padding:17px 15px;
+            max-height:500px; padding:17px 15px;
         }
         @keyframes animation-menu-mobile--open{
-            0%  {height:0; padding:0 15px;}
-            100%{height:auto; padding:17px 15px;}
+            0%  {max-height:0; padding:0 15px;}
+            100%{max-height:500px; padding:17px 15px;}
         } 
         /* wishlist */
             #main-header .mobile-header .attachment-nav .attachment-list .wishlist-wrapper .counter{font-size:16px;}
