--- a/style.css
+++ b/style.css
@@ -50,9 +50,10 @@ img{display:block; height:auto;}
         /* menu mobile · abierto */
         #main-header .mobile-header .menu-mobile.open{max-height:500px; padding:17px 15px;}
             /* menu-mobile · abierto · submenús */
-            #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul li .menu-item-has-children{display:block;}
+            #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul li.menu-item-has-children{display:block;}
             #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul li .sub-menu{border-top:1px solid #eee;}
             #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul li .sub-menu li{border-bottom:none;}
+            #main-header .mobile-header .menu-mobile :is(.attachment-nav, .mobile) ul li .sub-menu li a{min-height:31px;}
         /* wishlist */
             #main-header .mobile-header .attachment-nav .attachment-list .wishlist-wrapper .counter{font-size:16px;}
             #main-header .mobile-header .attachment-nav .attachment-list .wishlist-wrapper .counter .number{position:relative; top:-7px; color:var(--wp--preset--color--links);}
